2016-11-14  Brent Fulgham  <bfulgham@apple.com>

        Correct handling of changing input type
        https://bugs.webkit.org/show_bug.cgi?id=164759
        <rdar://problem/29211174>

        Reviewed by Darin Adler.

        * fast/forms/search-cancel-button-change-input-expected.txt: Added.
        * fast/forms/search-cancel-button-change-input.html: Added.

2016-11-11  Brent Fulgham  <bfulgham@apple.com>

        Neutered ArrayBuffers are not properly serialized
        https://bugs.webkit.org/show_bug.cgi?id=164647
        <rdar://problem/29213490>

        Reviewed by David Kilzer.

        * fast/canvas/neutered-imagedata-expected.txt: Added.
        * fast/canvas/neutered-imagedata.html: Added.

2016-11-16  Brent Fulgham  <bfulgham@apple.com>

        Clear track client when removing a track
        https://bugs.webkit.org/show_bug.cgi?id=164842
        <rdar://problem/29213621>

        Reviewed by Eric Carlson.

        * media/track/audio-track-add-remove-expected.txt: Added.
        * media/track/audio-track-add-remove.html: Added.
        * media/track/video-track-add-remove-expected.txt: Added.
        * media/track/video-track-add-remove.html: Added.

2016-12-22  Daniel Bates  <dabates@apple.com>

        Bypass pop-up blocker from cross-origin or sandboxed frame
        https://bugs.webkit.org/show_bug.cgi?id=166290
        <rdar://problem/29742039>

        Reviewed by Darin Adler.

        * fast/events/popup-blocked-from-sandboxed-frame-via-window-open-named-sibling-frame-expected.txt: Added.
        * fast/events/popup-blocked-from-sandboxed-frame-via-window-open-named-sibling-frame.html: Added.
        * fast/events/popup-blocked-from-sandboxed-frame-via-window-open-named-sibling-frame2-expected.txt: Added.
        * fast/events/popup-blocked-from-sandboxed-frame-via-window-open-named-sibling-frame2.html: Added.
        * fast/events/popup-blocked-from-unique-frame-via-window-open-named-sibling-frame-expected.txt: Added.